--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,18 +13,50 @@ edit_uri: ""
 # Copyright
 copyright: Copyright &copy; 2016 - 2022 Spiegel
 
+markdown_extensions:
+  # 약어
+  - abbr
+  - pymdownx.snippets
+
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+  - tables
+  # 컨텐츠 탭
+  - pymdownx.tabbed:
+      alternate_style: true
+
 # 테마 셋업
 theme:
   name: material
 
-  # 탭 메뉴
   features:
+    # 메뉴 탭바
     - navigation.tabs
+    # 컨텐츠 탭바
+    - content.tabs.link
 
   palette:
     scheme: slate
     primary: indigo
+
   language: kr
+
+  icon:
+    # 알림용 아이콘
+    admonition:
+      note: octicons/tag-16
+      abstract: octicons/checklist-16
+      info: octicons/info-16
+      tip: octicons/squirrel-16
+      success: octicons/check-16
+      question: octicons/question-16
+      warning: octicons/alert-16
+      failure: octicons/x-circle-16
+      danger: octicons/zap-16
+      bug: octicons/bug-16
+      example: octicons/beaker-16
+      quote: octicons/quote-16
 
 nav:
   - Home: index.md
